Fix spacing tra il container e il main, posizionamento titolo e logo

--- a/style.css
+++ b/style.css
@@ -21,14 +21,13 @@ header {
 
 }
 
-header div img {
+header div img, header div h1 {
   vertical-align: middle;
-  width: 80px;
+  width: 60px;
 }
 
 h1 {
   display: inline-block;
-  line-height: 80px;
   font-size: 60px;
 }
 
@@ -36,14 +35,13 @@ h1 {
   MAIN
 */
 main {
-  background-color: red
+  background-color: #F6F8F9;
+  padding: 10px 150px;
 }
 
 .container {
-
-  margin: 10px 150px;
-  background-color: rosybrown;
-  border: 3px solid black;;
+  background-color: white;
+  border-radius: 5px;
 }
 
 #buttons div {
@@ -66,7 +64,7 @@ main {
 }
 
 #main-info {
-  margin: 30px 0 0 30px;
+  padding: 30px 0 0 30px;
   
 }
 
